# fy690s_ws

./: .clang-format  .gitignore  .gitmodules  README.md
.github/: CODEOWNERS
px4/QGC/: f450_quad_params.params
ros2_ws/src/fa_hex_offboard/: CMakeLists.txt  package.xml
ros2_ws/src/fa_hex_offboard/include/: fa_pos_control.hpp
ros2_ws/src/fa_hex_offboard/launch/: motor_sweep.launch.py
ros2_ws/src/fa_hex_offboard/src/: fa_hex_offboard.cpp  fa_pos_control.cpp  motor_sweep.cpp  offboard_wrench_test.cpp
ros2_ws/src/offboard_control/: CMakeLists.txt  package.xml
ros2_ws/src/offboard_control/include/offboard_control/: QSF_w_offset_intctrl.h  QSF_w_offset_intctrl_U.h
ros2_ws/src/offboard_control/launch/: master_launch.py  offboard_control.py
ros2_ws/src/offboard_control/src/: admittance_controller.cpp  offboard_control_srv.cpp  path_visualizer.cpp  trajectory_publisher.cpp
ros2_ws/src/offboard_control/src/QSF_w_offset_intctrl/: QSF_w_offset_intctrl.cpp  QSF_w_offset_intctrl.lib  QSF_w_offset_intctrl_data.h  QSF_w_offset_intctrl_initialize.cpp  QSF_w_offset_intctrl_initialize.h  QSF_w_offset_intctrl_rtw.bat  QSF_w_offset_intctrl_rtw.mk  QSF_w_offset_intctrl_rtw.rsp  QSF_w_offset_intctrl_rtw_comp.rsp  QSF_w_offset_intctrl_terminate.cpp  QSF_w_offset_intctrl_terminate.h  QSF_w_offset_intctrl_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
ros2_ws/src/offboard_control/src/QSF_w_offset_intctrl/examples/: main.cpp  main.h
ros2_ws/src/offboard_control/src/QSF_w_offset_intctrl/interface/: _coder_QSF_w_offset_intctrl_api.cpp  _coder_QSF_w_offset_intctrl_api.h  _coder_QSF_w_offset_intctrl_info.cpp  _coder_QSF_w_offset_intctrl_info.h  _coder_QSF_w_offset_intctrl_mex.cpp  _coder_QSF_w_offset_intctrl_mex.h
ros2_ws/src/offboard_control/src/QSF_w_offset_intctrl_U/: QSF_w_offset_intctrl_U.cpp  QSF_w_offset_intctrl_U.lib  QSF_w_offset_intctrl_U_data.h  QSF_w_offset_intctrl_U_initialize.cpp  QSF_w_offset_intctrl_U_initialize.h  QSF_w_offset_intctrl_U_rtw.bat  QSF_w_offset_intctrl_U_rtw.mk  QSF_w_offset_intctrl_U_rtw.rsp  QSF_w_offset_intctrl_U_rtw_comp.rsp  QSF_w_offset_intctrl_U_terminate.cpp  QSF_w_offset_intctrl_U_terminate.h  QSF_w_offset_intctrl_U_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
ros2_ws/src/offboard_control/src/QSF_w_offset_intctrl_U/examples/: main.cpp  main.h
ros2_ws/src/offboard_control/src/QSF_w_offset_intctrl_U/interface/: _coder_QSF_w_offset_intctrl_U_api.cpp  _coder_QSF_w_offset_intctrl_U_api.h  _coder_QSF_w_offset_intctrl_U_info.cpp  _coder_QSF_w_offset_intctrl_U_info.h  _coder_QSF_w_offset_intctrl_U_mex.cpp  _coder_QSF_w_offset_intctrl_U_mex.h
ros2_ws/src/trajectory_publisher/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_publisher/src/: trajectory_publisher.cpp
ros2_ws/src/vicon_bridge/vicon_px4_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/vicon_bridge/vicon_px4_bridge/launch/: vicon_bridge.py
ros2_ws/src/vicon_bridge/vicon_px4_bridge/src/: vicon_to_px4_ev.cpp
scripts/: airframe_generator.py  check_fa_hex_allocation.py  fa_wrench_codegen.py  install_src_uxrce_agent.sh
